test/corpus/unicode.txt
==================
String escapes are their own nodes
==================

const s = "caf\u{E9} \x41\n";
const t = "plain";

---

(source_file
  (decl_statement
    name: (identifier)
    value: (string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)))
  (decl_statement
    name: (identifier)
    value: (string_literal)))

==================
Character literals hold one code point or one escape
==================

const a = 'a';
const b = 'é';
const c = '😀';
const d = '\u{1F600}';
const e = '\xFF';
const f = '\'';

---

(source_file
  (decl_statement
    name: (identifier)
    value: (char_literal))
  (decl_statement
    name: (identifier)
    value: (char_literal))
  (decl_statement
    name: (identifier)
    value: (char_literal))
  (decl_statement
    name: (identifier)
    value: (char_literal))
  (decl_statement
    name: (identifier)
    value: (char_literal))
  (decl_statement
    name: (identifier)
    value: (char_literal)))

==================
Raw identifiers take any code point and escapes
==================

const @"😀" = @"caf\u{E9}";
const @"👨‍👩‍👧" = 1;

---

(source_file
  (decl_statement
    name: (identifier)
    value: (identifier))
  (decl_statement
    name: (identifier)
    value: (integer_literal)))

==================
A malformed \u escape recovers as an error
==================

const s = "a\u{zz}b";
const t = 1;

---

(source_file
  (decl_statement
    name: (identifier)
    value: (string_literal
      (ERROR
        (UNEXPECTED 'z')
        (identifier)
        (identifier))))
  (decl_statement
    name: (identifier)
    value: (integer_literal)))

==================
A keyword is a name after a dot, as in @export's options
==================

@export(add, .{ .name = "__addtf3", .linkage = .weak });
const t = x.type;

---

(source_file
  (expression_statement
    (builtin_call_expression
      function: (builtin_identifier)
      (arguments
        (identifier)
        (initializer_expression
          (field_initializer
            name: (identifier)
            value: (string_literal))
          (field_initializer
            name: (identifier)
            value: (implicit_access_expression
              member: (identifier)))))))
  (decl_statement
    name: (identifier)
    value: (dot_expression
      object: (identifier)
      member: (identifier))))
